--- a/Assets/css/productos.css
+++ b/Assets/css/productos.css
@@ -19,10 +19,10 @@ h1 { font: bold 100% sans-serif; letter-spacing: 0.5em; text-align: center; text
 
 table { font-size: 75%; table-layout: fixed; width: 100%; }
 table { border-collapse: separate; border-spacing: 2px; }
-th, td { border-width: 1px; padding: 0.5em; position: relative; text-align: left; }
+th, td { border-width: 1px; padding: 0.5em; position: relative; text-align: center; }
 th, td { border-radius: 0.25em; border-style: solid; }
 th { background: #EEE; border-color: #BBB; }
-td { border-color: #DDD; }
+td { border-color: #DDD;}
 
 /* page */
 
