--- a/Assets/css/facturacion.css
+++ b/Assets/css/facturacion.css
@@ -2,7 +2,8 @@
 
 
 #invoiceholder h1{
-  font-size: 1.5em;
+  font-family: "Bebas Neue";
+  font-size: 1.2em;
   color: #222;
 }
 #invoiceholder h2{font-size: .9em;}
@@ -47,7 +48,7 @@
   float: left;
 	height: 60px;
 	width: 60px;
-	background: url(http://michaeltruong.ca/images/logo1.png) no-repeat;
+	background: url(../../Assets/img/service.png) no-repeat;
 	background-size: 60px 60px;
 }
 #invoiceholder .clientlogo{
